--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <title>Slider</title>
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <a href="#">Home</a>
+            <a href="#">Informações</a>
+            <a href="#">Fale conosco</a>
+        </nav>
+    </header>
 </body>
 </html>
