--- a/index.html
+++ b/index.html
@@ -13,5 +13,13 @@
             <a href="#">Fale conosco</a>
         </nav>
     </header>
+
+    <main class="container">
+        <div class="list">
+            <div class="list-item">
+                
+            </div>
+        </div>
+    </main>
 </body>
 </html>
