--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <main class="container">
         <div class="list">
             <div class="list-item">
-                
+                <img src="img/img1.jpg" alt="foto-1">
             </div>
         </div>
     </main>
