--- a/index.html
+++ b/index.html
@@ -18,6 +18,14 @@
         <div class="list">
             <div class="list-item">
                 <img src="img/img1.jpg" alt="foto-1">
+                <div class="content">
+                    <h2>Bali</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi provident possimus voluptates nihil ullam cupiditate, dicta consequuntur autem totam iusto dolores accusamus vel deleniti aliquid a veritatis aut vitae ipsa.</p>
+                    <div class="buttons">
+                        <button>Saiba Mais</button>
+                        <button>Acessar</button>
+                    </div>
+                </div>
             </div>
         </div>
     </main>
