--- a/index.html
+++ b/index.html
@@ -27,6 +27,42 @@
                     </div>
                 </div>
             </div>
+
+            <div class="list-item">
+                <img src="img/img2.jpg" alt="foto-2">
+                <div class="content">
+                    <h2>Paris</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi provident possimus voluptates nihil ullam cupiditate, dicta consequuntur autem totam iusto dolores accusamus vel deleniti aliquid a veritatis aut vitae ipsa.</p>
+                    <div class="buttons">
+                        <button>Saiba Mais</button>
+                        <button>Acessar</button>
+                    </div>
+                </div>
+            </div>
+
+            <div class="list-item">
+                <img src="img/img3.jpg" alt="foto-3">
+                <div class="content">
+                    <h2>Roma</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi provident possimus voluptates nihil ullam cupiditate, dicta consequuntur autem totam iusto dolores accusamus vel deleniti aliquid a veritatis aut vitae ipsa.</p>
+                    <div class="buttons">
+                        <button>Saiba Mais</button>
+                        <button>Acessar</button>
+                    </div>
+                </div>
+            </div>
+
+            <div class="list-item">
+                <img src="img/img4.jpg" alt="foto-4">
+                <div class="content">
+                    <h2>Veneza</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi provident possimus voluptates nihil ullam cupiditate, dicta consequuntur autem totam iusto dolores accusamus vel deleniti aliquid a veritatis aut vitae ipsa.</p>
+                    <div class="buttons">
+                        <button>Saiba Mais</button>
+                        <button>Acessar</button>
+                    </div>
+                </div>
+            </div>
         </div>
     </main>
 </body>
