--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div class="list-item">
                 <img src="img/img1.jpg" alt="foto-1">
                 <div class="content">
-                    <h2>Bali</h2>
+                    <h2 class="title">Bali</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi provident possimus voluptates nihil ullam cupiditate, dicta consequuntur autem totam iusto dolores accusamus vel deleniti aliquid a veritatis aut vitae ipsa.</p>
                     <div class="buttons">
                         <button>Saiba Mais</button>
@@ -32,7 +32,7 @@
             <div class="list-item">
                 <img src="img/img2.jpg" alt="foto-2">
                 <div class="content">
-                    <h2>Paris</h2>
+                    <h2 class="title">Paris</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi provident possimus voluptates nihil ullam cupiditate, dicta consequuntur autem totam iusto dolores accusamus vel deleniti aliquid a veritatis aut vitae ipsa.</p>
                     <div class="buttons">
                         <button>Saiba Mais</button>
@@ -44,7 +44,7 @@
             <div class="list-item">
                 <img src="img/img3.jpg" alt="foto-3">
                 <div class="content">
-                    <h2>Roma</h2>
+                    <h2 class="title">Roma</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi provident possimus voluptates nihil ullam cupiditate, dicta consequuntur autem totam iusto dolores accusamus vel deleniti aliquid a veritatis aut vitae ipsa.</p>
                     <div class="buttons">
                         <button>Saiba Mais</button>
@@ -56,7 +56,7 @@
             <div class="list-item">
                 <img src="img/img4.jpg" alt="foto-4">
                 <div class="content">
-                    <h2>Veneza</h2>
+                    <h2 class="title">Veneza</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi provident possimus voluptates nihil ullam cupiditate, dicta consequuntur autem totam iusto dolores accusamus vel deleniti aliquid a veritatis aut vitae ipsa.</p>
                     <div class="buttons">
                         <button>Saiba Mais</button>
