--- a/index.html
+++ b/index.html
@@ -65,6 +65,40 @@
                 </div>
             </div>
         </div>
+
+        <div class="thumb">
+            <div class="thumb-item">
+                <img src="img/img1.jpg" alt="thumb-1">
+                <div class="content">
+                    <h3>Bali</h3>
+                    <p>Visite Bali</p>
+                </div>
+            </div>
+
+            <div class="thumb-item">
+                <img src="img/img2.jpg" alt="thumb-2">
+                <div class="content">
+                    <h3>Paris</h3>
+                    <p>Visite Paris</p>
+                </div>
+            </div>
+
+            <div class="thumb-item">
+                <img src="img/img3.jpg" alt="thumb-3">
+                <div class="content">
+                    <h3>Roma</h3>
+                    <p>Visite Roma</p>
+                </div>
+            </div>
+
+            <div class="thumb-item">
+                <img src="img/img4.jpg" alt="thumb-4">
+                <div class="content">
+                    <h3>Veneza</h3>
+                    <p>Visite Veneza</p>
+                </div>
+            </div>
+        </div>
     </main>
 </body>
 </html>
