--- a/index.html
+++ b/index.html
@@ -99,6 +99,11 @@
                 </div>
             </div>
         </div>
+
+        <div class="arrows">
+            <button class="back"> < </button>
+            <button class="next"> > </button>
+        </div>
     </main>
 </body>
 </html>
