--- a/index.html
+++ b/index.html
@@ -105,5 +105,7 @@
             <button class="next"> > </button>
         </div>
     </main>
+
+    <script src="script.js"></script>
 </body>
 </html>
