--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <img src="img/img1.jpg" alt="foto-1">
                 <div class="content">
                     <h2 class="title">Bali</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi provident possimus voluptates nihil ullam cupiditate, dicta consequuntur autem totam iusto dolores accusamus vel deleniti aliquid a veritatis aut vitae ipsa.</p>
+                    <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi provident possimus voluptates nihil ullam cupiditate, dicta consequuntur autem totam iusto dolores accusamus vel deleniti aliquid a veritatis aut vitae ipsa.</p>
                     <div class="buttons">
                         <button>Saiba Mais</button>
                         <button>Acessar</button>
@@ -33,7 +33,7 @@
                 <img src="img/img2.jpg" alt="foto-2">
                 <div class="content">
                     <h2 class="title">Paris</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi provident possimus voluptates nihil ullam cupiditate, dicta consequuntur autem totam iusto dolores accusamus vel deleniti aliquid a veritatis aut vitae ipsa.</p>
+                    <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi provident possimus voluptates nihil ullam cupiditate, dicta consequuntur autem totam iusto dolores accusamus vel deleniti aliquid a veritatis aut vitae ipsa.</p>
                     <div class="buttons">
                         <button>Saiba Mais</button>
                         <button>Acessar</button>
@@ -45,7 +45,7 @@
                 <img src="img/img3.jpg" alt="foto-3">
                 <div class="content">
                     <h2 class="title">Roma</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi provident possimus voluptates nihil ullam cupiditate, dicta consequuntur autem totam iusto dolores accusamus vel deleniti aliquid a veritatis aut vitae ipsa.</p>
+                    <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi provident possimus voluptates nihil ullam cupiditate, dicta consequuntur autem totam iusto dolores accusamus vel deleniti aliquid a veritatis aut vitae ipsa.</p>
                     <div class="buttons">
                         <button>Saiba Mais</button>
                         <button>Acessar</button>
@@ -57,7 +57,7 @@
                 <img src="img/img4.jpg" alt="foto-4">
                 <div class="content">
                     <h2 class="title">Veneza</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi provident possimus voluptates nihil ullam cupiditate, dicta consequuntur autem totam iusto dolores accusamus vel deleniti aliquid a veritatis aut vitae ipsa.</p>
+                    <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi provident possimus voluptates nihil ullam cupiditate, dicta consequuntur autem totam iusto dolores accusamus vel deleniti aliquid a veritatis aut vitae ipsa.</p>
                     <div class="buttons">
                         <button>Saiba Mais</button>
                         <button>Acessar</button>
